# ewa

./: .gitignore  main.py  makefile  pyproject.toml
ewa/: __init__.py  main.py
ewa/commands/: demo.py  epub.py  epub2.py  epub3.py  ex1.py  ex2.py  ex3.py
ewa/epub/: settings.py
ewa/use_cases/: epub.py
ewa/utils/: epub_resizing.py  image.py  parsing.py  table.py  zip.py
ewa/utils/epub/: chapter_processor.py  epub.py  epub_builder.py  epub_data.py  epub_pipeline.py  epub_resizing.py  epub_state.py  epub_streaming.py  image_processor.py  image_processor_new.py
ewa/utils/image/: image_optimization_settings.py  image_processor.py
plugins/epub/: pyproject.toml
plugins/epub/old/: epub.py  epub3.py  pyproject.toml
plugins/epub/src/epub/: chapter_processor.py  constants.py  epub.py  epub3.py  epub_classes.py  epub_state.py  file_parsing.py  main.py  serene_panda.py  tables.py  tables2.py  use_cases.py  utils.py
plugins/epub/src/epub/serene_panda/: font.py  orchestration.py  serene_panda.py
src/ewa/: config.py  loader.py  logger_config.py  main.py  sqlite_model_table.py  sqlmodel_storage.py  sqlmodel_table.py  ui.py
src/ewa/cli/: print_table.py  progress.py
