[project]
name = "ewa"
version = "0.1.2"
description = "ewa core CLI application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "typer>=0.20.0",
]

[tool.uv.workspace]
members = [
    "plugins/*",
    "library",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ewa"]

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]

[project.scripts]
ewa = "ewa.main:main"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py314"