[project]
name = "ewa"
version = "0.1.2"
description = "ewa core CLI application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "pytesseract>=0.3.13",
    "typer>=0.20.0",
]

[tool.uv.workspace]
members = [
    "plugins/*",
    "library",
]

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ewa"]

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
ewa = "ewa.main:main"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py314"
