[project]
name = "ewa"
version = "0.1.3"
description = "ewa core CLI application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "pillow>=12.1.0",
    "pydantic-settings>=2.12.0",
    "typer>=0.20.0",
]

[tool.uv.workspace]
members = [
    "plugins/*",
    "library",
]

[tool.uv.sources]
library = { workspace = true }
epub = { workspace = true }

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ewa"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-xdist>=3.8.0",
    "library[all]",
    "epub",
]

[project.scripts]
ewa = "ewa.main:main"

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py314"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
