[project]
name = "ewa"
version = "0.1.1"
description = "core ewa CLI application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.11.0",
    "typer>=0.12.5",
    "typer-shell>=0.1.12",
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "ebooklib>=0.19",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "sqlitedict>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ewa"]

[project.scripts]
ewa = "ewa.core.main:main"

[project.scripts]
ewa = "ewa.main:app"
